--- a/public/app/views/includes/workspace/thumbnails.view.html
+++ b/public/app/views/includes/workspace/thumbnails.view.html
@@ -1,7 +1,7 @@
 <html>
   <head>
-    <script src="jquery.js"></script>
-    <script src="bower_components/lazysizes/ls.attrchange.min.js" async=""></script>
+    <script src="bower_components/jquery/dist/jquery.js"></script>
+    <script src="bower_components/lazysizes/plugins/attrchange/ls.attrchange.min.js" async=""></script>
     <script src="bower_components/lazysizes/lazysizes.min.js" async=""></script>
     <script type="text/javascript">
     var dropZone = document.getElementById('dropZone');
