--- a/public/app/views/includes/workspace/workspace.top.html
+++ b/public/app/views/includes/workspace/workspace.top.html
@@ -1,7 +1,7 @@
 
 <div class="md-toolbar-tools md-whiteframe-z1" flex>
   <md-button ng-click="toggleSidenav('left')" hide-gt-sm class="md-icon-button">
-    <md-icon aria-label="Menu" md-svg-icon="//s3-us-west-2.amazonaws.com/s.cdpn.io/68133/menu.svg"></md-icon>
+    <md-icon aria-label="Menu" md-svg-icon="assets/img/menu.svg"></md-icon>
   </md-button>
   <md-menu>
     <md-button class="md-primary" aria-label="Workspace Selector" ng-click="$mdOpenMenu($event)">
