bad-hack: making button black so i could see it FIXME make it done in css correctly!

--- a/public/app/views/includes/workspace/workspace.top.html
+++ b/public/app/views/includes/workspace/workspace.top.html
@@ -4,7 +4,7 @@
     <md-icon aria-label="Menu" md-svg-icon="assets/img/menu.svg"></md-icon>
   </md-button>
   <md-menu>
-    <md-button class="md-primary" aria-label="Workspace Selector" ng-click="$mdOpenMenu($event)">
+    <md-button style="color: black;" class="md-primary" aria-label="Workspace Selector" ng-click="$mdOpenMenu($event)">
       Upload Set&nbsp;<i class="fa fa-caret-down"></i>
     </md-button>
     <md-menu-content width="4">
