Fixed date-time response bug, code reformatting

--- a/public/app/views/includes/workspace/image.info.html
+++ b/public/app/views/includes/workspace/image.info.html
@@ -21,13 +21,13 @@
       <md-list>
         <div ng-if="!edit_datetime" ng-init="edit_datetime=false">
           <md-list-item>
-            {{ mediaAsset.dateTime }} 
+            The date is {{ mediaAsset.dateTime }}
             <md-icon-button ng-click="$parent.edit_datetime=true" class="fa fa-edit" style="color: green; padding-left: 5px;"></md-icon-button>
           </md-list-item>
         </div>
         <div ng-if="edit_datetime">
           <md-datepicker ng-model="datetime_model" ng-init="set_datetime_model()" ng-value="mediaAsset.dateTime" ng-change="workspace_input.datetime_input = datetime_model.toISOString()"></md-datepicker>
-          &nbsp;
+          <!-- &nbsp; -->
           <md-icon-button ng-click="save_datetime(); $parent.edit_datetime=false" class="fa fa-save"></md-icon-button>
         </div>
       </md-list>
