--- a/public/app/views/includes/workspace/image.info.html
+++ b/public/app/views/includes/workspace/image.info.html
@@ -13,7 +13,7 @@
   </md-toolbar>
   <md-dialog-content>
     <!-- image display -->
-    <img style="margin: auto; max-width: 100%;" src="{{ mediaAsset.url }}" />
+    <img style="margin: 0 auto; display: block; max-width: 100%; padding-top: .75cm" src="{{ mediaAsset.url }}" />
     <div class="md-dialog-content">
       <!-- image metadata and information -->
       <md-subheader>Date and Time
