--- a/public/app/views/includes/workspace/upload.dialog.html
+++ b/public/app/views/includes/workspace/upload.dialog.html
@@ -1,5 +1,4 @@
-
-<md-dialog>
+<md-dialog style="border-radius: 5px;">
   <md-toolbar>
     <div class="md-toolbar-tools">
       <h2>Upload Images</h2>
@@ -30,7 +29,7 @@
     </div>
   </md-dialog-content>
   <md-dialog-actions layout="row">
-    <input type="file" multiple accept="image/*" class="file-input" id="img-upload-btn" onchange="angular.element(this).scope().upload.select(this)">
+    <input style="display: none;" type="file" multiple accept="image/*" class="file-input" id="img-upload-btn" onchange="angular.element(this).scope().upload.select(this)">
     <!-- <lf-ng-md-file-input lf-files="files" drag multiple preview progress ng-onchange="upload.select(this)" ng-show="upload.stage < 2" ng-disabled="upload.stage > 0"></lf-ng-md-file-input> -->
 
     <md-button class="md-primary md-raised" ng-click="proxy('img-upload-btn')" ng-show="upload.stage < 2" ng-disabled="upload.stage > 0">
