--- a/public/assets/css/ibeis.css
+++ b/public/assets/css/ibeis.css
@@ -222,13 +222,17 @@ td {
     color: #dd2c00;
     margin: 10px 0 0 25px;
 }
+.datepicker .form-control{
+  height: 150px;
+  padding: 10px;
+}
 
 /*table stuff*/
 table {
     color: #333;
     /*font-family: Helvetica, Arial, sans-serif;*/
 
-    width: 640px;
+    /*width: 640px;*/
     border-collapse: collapse;
     border-spacing: 0;
 }
