Added functionality to check current filter

--- a/public/app/views/includes/workspace/filter.sidenav.html
+++ b/public/app/views/includes/workspace/filter.sidenav.html
@@ -184,6 +184,11 @@
 
 
       </div>
+
+      <div layout="row"> <p class="md-primary">Current filter: {{ filterID }} </p>
+      </div>
+      <md-divider></md-divider>
+
       <div layout="row">
         <md-button ng-click="filter.submitFilters()" class="md-primary" flex>
           Apply
