fix option button bug

--- a/public/app/views/pages/workspace.html
+++ b/public/app/views/pages/workspace.html
@@ -47,7 +47,7 @@ window.addEventListener("drop",function(e){
         </md-menu-content>
       </md-menu>
       <md-menu>
-        <button ng-click="$meMenu.open()">
+        <button ng-click="$mdMenu.open()">
           Options
         </button>
         <md-menu-content>
