--- a/public/app/views/includes/workspace/workspace.top.html
+++ b/public/app/views/includes/workspace/workspace.top.html
@@ -96,7 +96,7 @@
       </md-tooltip>
     </md-button>
     <md-menu-content width="3">
-      <md-menu-item ng-repeat="t in types">
+      <!--md-menu-item ng-repeat="t in types">
         <md-button ng-click="setType(t)">
           <div layout="row">
             <p flex>
@@ -106,8 +106,8 @@
             </p>
           </div>
         </md-button>
-      </md-menu-item>
-      <md-divider></md-divider>
+      </md-menu-item-->
+      <!--md-divider></md-divider-->
       <md-menu-item ng-repeat="v in views">
         <md-button ng-click="setView(v)">
           <div layout="row">
