--- a/public/app/views/includes/workspace/thumbnails.view.html
+++ b/public/app/views/includes/workspace/thumbnails.view.html
@@ -54,10 +54,10 @@ div#dropZone {
   text-align: center;
   vertical-align: middle;
   position: fixed;
-  top: 0px;
-  left: 0px;
-  width: 96.5%;
-  height: 63%;
+  top: 65px;
+  left: 350px;
+  width: 100%;
+  height: 100%;
   z-index: 999;
   opacity: 0.8;
   visibility: hidden;
@@ -77,7 +77,7 @@ div#dropZone {
   <div class="gridListdemoBasicUsage">
 
 
-    <div id="dropZone"><input type="file" multiple accept="image/*" class="file-input" id="img-upload-btn" onchange="angular.element(this).scope().upload.select(this)"><center> Drag and drop files here... </center></div>
+    <div id="dropZone"><input type="file" multiple accept="image/*" class="file-input" style="display: none;" id="img-upload-btn" onchange="angular.element(this).scope().upload.select(this)"><center> Drag and drop files here... </center></div>
     <div class='md-padding' layout="row" layout-align="center center" layout-wrap>
       <!-- <div infinite-scroll="addMoreItems()" infinite-scroll-distance='2'> -->
 
@@ -90,8 +90,8 @@ div#dropZone {
               </div>
             </div> -->
             <!-- <img class="card-img lazyload" data-src="{{slide.children[0].url}}"/> -->
-            <img class="card-img lazyload" data-src="{{slide.url}}"/>
-          </div>
+            <img class="card-img lazyload" data-src="{{slide.url}}"/> -->
+          <!-- </div>
           <md-card-actions layout="row" layout-align="center" class="img-text">
           <!-- <h4>{{slide.title}}</h4 > -->
           </md-card-actions>
