add sorting functionality in table view

--- a/public/assets/css/ibeis.css
+++ b/public/assets/css/ibeis.css
@@ -227,6 +227,12 @@ td {
   padding: 10px;
 }
 
+.sortorder:after {
+  content: '\25b2';   // BLACK UP-POINTING TRIANGLE
+}
+.sortorder.reverse:after {
+  content: '\25bc';   // BLACK DOWN-POINTING TRIANGLE
+}
 /*table stuff*/
 table {
     color: #333;
