--- a/public/app/views/includes/workspace/table.view.html
+++ b/public/app/views/includes/workspace/table.view.html
@@ -1,4 +1,4 @@
-<!-- 
+<!--
 <div flex>
     <table st-table="slides" class="table" style="width: 100%">
         <thead>
@@ -32,14 +32,19 @@
         <thead>
             <tr>
                 <th>Thumbnail</th>
-                <th st-sort="id">Annotation ID</th>
-                <th st-sort="dateTime">Date</th>
+                <th ng-click="tableSortBy('id')">
+                  Annotation ID
+                  <span ng-show="propertyName==='id'" ng-class="{reverse:reverse}"></span>
+
+                </th>
+                <th ng-click="tableSortBy('dateTime')">Date</th>
+                <span ng-show="propertyName==='dateTime'" ng-class="{reverse: reverse}"></span>
                 <th st-sort="submetterOrganization">Organization</th>
                 <th st-sort="recordedBy">recordedBy</th>
             </tr>
         </thead>
         <tbody>
-            <tr ng-repeat="slide in currentSlides" ng-click="showImageInfo($event, $index)">
+            <tr ng-repeat="slide in currentSlides | orderBy:propertyName:reverse" ng-click="showImageInfo($event, $index)">
                 <td><img class="lazyload" data-src="{{slide.url}}" style="max-height: 150px; max-width: 150px; width: auto" /></td>
                 <td>{{slide.id}}</td>
                 <td>
