--- a/public/app/views/includes/workspace/workspace.left.html
+++ b/public/app/views/includes/workspace/workspace.left.html
@@ -95,7 +95,7 @@ $(function(){
     <md-button class="md-primary md-raised sidenav-btn" ng-disabled="workspace == 'Loading...'" ng-click="identification.showIdentificationReview()">
       <strong>Review</strong> Identification ({{ reviewCounts.identification }})
     </md-button>
-    <md-button class="md-secondary md-raised sidenav-btn" ng-disabled="workspace == 'Loading...'" href="http://wb.scribble.com/">
+    <md-button class="md-secondary md-raised sidenav-btn" ng-disabled="workspace == 'Loading...'" href="http://uidev.scribble.com/">
       <strong>View</strong> Biological Data
     </md-button>
   </div>
