--- a/public/app/views/includes/workspace/upload.dialog.html
+++ b/public/app/views/includes/workspace/upload.dialog.html
@@ -3,7 +3,7 @@
     <div class="md-toolbar-tools">
       <h2>Upload Images</h2>
       <span flex></span>
-      <md-button class="md-icon-button" ng-click="upload.close()">
+      <md-button class="md-icon-button" aria-label="Remove" ng-click="upload.close()">
         <i class="fa fa-close"></i>
       </md-button>
     </div>
