--- a/public/app/views/pages/workspace.html
+++ b/public/app/views/pages/workspace.html
@@ -25,7 +25,7 @@ window.addEventListener("drop",function(e){
           </md-menu-item>
           <md-menu-item>
             <md-menu>
-              <md-button ng-click="$meMenu.open()">Upload with Metadata File</md-button>
+              <md-button ng-click="$mdMenu.open()">Upload with Metadata File</md-button>
               <md-menu-content>
                 <md-menu-item>
                   <md-button ng-click="lewaUpload.show()">Lewa XML</md-button>
