Upload functionality up!

--- a/public/app/views/includes/workspace/upload/completed_upload.dialog.html
+++ b/public/app/views/includes/workspace/upload/completed_upload.dialog.html
@@ -1,4 +1,4 @@
-<md-dialog>
+<md-dialog style="border-radius: 5px;">
   <form ng-submit="upload.uploadSetDialog.completeUpload()">
     <md-toolbar>
       <div class="md-toolbar-tools">
@@ -44,8 +44,8 @@
     </md-dialog-actions>
   </form>
 </md-dialog>
-<script>
+<!-- <script>
   $("#workspace_name_input").alphanum({
     allow: '-_;'
   });
-</script>
+</script> -->
