to test mark_individual

--- a/public/app/views/includes/workspace/image.info.html
+++ b/public/app/views/includes/workspace/image.info.html
@@ -64,6 +64,9 @@
           </div>
         </md-list-item>
       </md-list>
+      <md-button ng-click="delete_image()">
+        Delete Photo
+      </md-button>
     </div>
   </md-dialog-content>
 </md-dialog>
