--- a/public/app/views/includes/workspace/table.view.html
+++ b/public/app/views/includes/workspace/table.view.html
@@ -44,7 +44,7 @@
             </tr>
         </thead>
         <tbody>
-            <tr ng-repeat="slide in currentSlides | orderBy:propertyName:reverse" ng-click="showImageInfo($event, $index)">
+            <tr ng-repeat="slide in currentSlides | orderBy:propertyName:reverse" ng-click="tableImageInfo($event, slide.id)">
                 <td><img class="lazyload" data-src="{{slide.url}}" style="max-height: 150px; max-width: 150px; width: auto" /></td>
                 <td>{{slide.id}}</td>
                 <td>
