Potential save error fix

--- a/public/app/views/includes/workspace/upload/completed_upload.dialog.html
+++ b/public/app/views/includes/workspace/upload/completed_upload.dialog.html
@@ -30,7 +30,7 @@
           <input ng-model="upload.uploadSetDialog.uploadSetName">
         </md-input-container>
         <md-button type="button" ng-click="upload.uploadSetDialog.generateName()">
-          Create a Name for Me
+          Autofill Name
         </md-button>
       </div>
       <div class="md-dialog-content" ng-if="upload.uploadSetDialog.addToOption === 'uncategorized'">
