add deleting images functionality (just work on "local" images since server doesn't support this post yet)

--- a/public/app/views/includes/workspace/image.info.html
+++ b/public/app/views/includes/workspace/image.info.html
@@ -77,7 +77,7 @@
           </div>
         </md-list-item>
       </md-list>
-      <md-button ng-click="delete_image()">
+      <md-button class="dltbtn" ng-click="delete_image($index)">
         Delete Photo
       </md-button>
     </div>
