--- a/public/app/views/includes/workspace/image.info.html
+++ b/public/app/views/includes/workspace/image.info.html
@@ -77,8 +77,8 @@
           </div>
         </md-list-item>
       </md-list>
-      <md-button class="dltbtn" ng-click="delete_image($index)">
-        Delete Photo
+      <md-button class="dltbtn" ng-click="delete_id=mediaAsset.id; delete_image()">
+        Delete Image
       </md-button>
     </div>
   </md-dialog-content>
