Reset images after upload, check for valid workspace name

--- a/public/app/views/includes/workspace/filter.sidenav.html
+++ b/public/app/views/includes/workspace/filter.sidenav.html
@@ -4,7 +4,7 @@
     <h1 class="md-toolbar-tools">Filter Options &nbsp;
       <md-menu md-position-mode="target-right target">
     <md-button aria-label="View Selector" ng-click="$mdMenu.open($event)">
-      FILTER FOR...<i class="fa fa-caret-down" aria-hidden="true" fa-lg></i>
+      Filter for... <i class="fa fa-caret-down" aria-hidden="true" fa-lg></i>
       <md-tooltip md-direction="left" md-autohide>
         Viewing {{filterID}} filter.
       </md-tooltip>
