--- a/public/app/views/includes/workspace/workspace.top.html
+++ b/public/app/views/includes/workspace/workspace.top.html
@@ -84,7 +84,7 @@
   <span flex></span>
   <md-menu md-position-mode="target-right target">
     <md-button aria-label="View Selector" ng-click="$mdMenu.open($event)">
-      VIEW
+      VIEW <i class="fa fa-caret-down" aria-hidden="true" fa-lg></i>
       <md-tooltip md-direction="left" md-autohide>
         Viewing {{type}} in {{view}} mode.
       </md-tooltip>
