change detection dialog size

--- a/public/app/views/includes/workspace/detection.review.html
+++ b/public/app/views/includes/workspace/detection.review.html
@@ -1,4 +1,4 @@
-<md-dialog class="" aria-label="detectionDialog" ng-cloak>
+<md-dialog class="detectionDialog" aria-label="detectionDialog" ng-cloak>
   <md-toolbar>
     <div class="md-toolbar-tools">
       <h2>Detection Review</h2>
@@ -16,7 +16,7 @@
       </md-button>
     </div>
   </md-toolbar>
-  <md-dialog-content style="max-height: 100%;">
+  <md-dialog-content>
     <div id="detection-loading" layout="row" layout-sm="column" layout-align="space-around">
       <md-progress-circular md-mode="indeterminate"></md-progress-circular>
     </div>
