--- a/public/assets/css/ibeis.css
+++ b/public/assets/css/ibeis.css
@@ -90,6 +90,13 @@ md-menu-content {
   color:red;
 }
 
+.detectionDialog{
+  /*max-width: 100%;
+  max-height: 100%;*/
+  width: 100%;
+  height: 100%;
+  border-radius: 0;
+}
 
 /* Table Styles */
 
