--- a/public/app/views/includes/workspace/annotation.review.html
+++ b/public/app/views/includes/workspace/annotation.review.html
@@ -1,7 +1,7 @@
 <md-dialog class="detectionDialog" aria-label="detectionDialog" ng-cloak>
   <md-toolbar>
     <div class="md-toolbar-tools">
-      <h2>Detection Review</h2>
+      <h2>Annotation Review</h2>
       <span flex></span>
       <md-button class="md-primary" ng-click="detection.endReview()">Save and Exit
         <md-tooltip md-autohide>
