Revert "small typo"
This reverts commit 927b3ef91cdea784c3cf99d90e8e4b37f8a54e97.

--- a/public/app/views/includes/workspace/detection.review.html
+++ b/public/app/views/includes/workspace/detection.review.html
@@ -20,7 +20,7 @@
     <div id="detection-loading" layout="row" layout-sm="column" layout-align="space-around">
       <md-progress-circular md-mode="indeterminate"></md-progress-circular>
     </div>
-    <div  class="ibeis-div" id="detection-review"></div>
+    <div layout-padding flex class="ibeis-div" id="detection-review"></div>
 	<div id="detection-complete">{{detection.reviewCompleteText}}</div>
     <md-dialog-actions layout="row">
       <div>
