--- a/public/assets/css/ibeis.css
+++ b/public/assets/css/ibeis.css
@@ -91,10 +91,10 @@ md-menu-content {
 }
 
 .detectionDialog{
-/*max-width: 100%;*/
-  max-height: 100%;
+  /*max-width: 100%;
+  max-height: 100%;*/
   width: 100%;
-  height: 600px;
+  height: 100%;
   border-radius: 0;
 }
 
