Synchronized all review methods

--- a/public/app/views/includes/workspace/annotation.review.html
+++ b/public/app/views/includes/workspace/annotation.review.html
@@ -1,4 +1,4 @@
-<md-dialog class="detectionDialog" aria-label="detectionDialog" ng-cloak>
+<md-dialog class="fullScreenDialog" aria-label="fullScreenDialog" ng-cloak>
   <md-toolbar>
     <div class="md-toolbar-tools">
       <h2>Annotation Review</h2>
@@ -17,11 +17,6 @@
     </div>
   </md-toolbar>
   <md-dialog-content>
-    <div id="detection-loading" layout="row" layout-sm="column" layout-align="space-around">
-      <md-progress-circular md-mode="indeterminate"></md-progress-circular>
-    </div>
-    <div  class="ibeis-div" id="detection-review"></div>
-	<div id="detection-complete">{{detection.reviewCompleteText}}</div>
     <md-dialog-actions layout="row">
       <div>
         <md-button class="md-primary md-raised" ng-disabled="!detection.allowBackButton" ng-click="detection.decrementOffset()">Go Back</md-button>
@@ -29,5 +24,11 @@
         <!-- <md-utton class="md-primary md-raised" ng-click="detection.endReview()">Save and Exit</md-button> -->
       </div>
     </md-dialog-actions>
+    <div id="detection-loading" layout="row" layout-sm="column" layout-align="space-around">
+      <md-progress-circular md-mode="indeterminate"></md-progress-circular>
+    </div>
+    <div  class="ibeis-div" id="detection-review"></div>
+	<div id="detection-complete">{{detection.reviewCompleteText}}</div>
+
   </md-dialog-content>
 </md-dialog>
