--- a/public/app/views/includes/workspace/detection.review.html
+++ b/public/app/views/includes/workspace/detection.review.html
@@ -1,4 +1,4 @@
-<md-dialog class="detectionDialog" aria-label="detectionDialog" ng-cloak>
+<md-dialog class="fullScreenDialog" aria-label="fullScreenDialog" ng-cloak>
   <md-toolbar>
     <div class="md-toolbar-tools">
       <h2>Detection Review</h2>
