--- a/public/assets/css/ibeis.css
+++ b/public/assets/css/ibeis.css
@@ -90,7 +90,7 @@ md-menu-content {
   color:red;
 }
 
-.detectionDialog{
+.fullScreenDialog{
   max-width: 100%;
   max-height: 100%;
   width: 100%;
