--- a/public/app/views/includes/workspace/detection.review.html
+++ b/public/app/views/includes/workspace/detection.review.html
@@ -26,8 +26,9 @@
     </md-dialog-actions>
     <div id="detection-loading" layout="row" layout-sm="column" layout-align="space-around">
       <md-progress-circular md-mode="indeterminate"></md-progress-circular>
+      <div layout="row" layout-sm="column">This may take a while....</div>
     </div>
-    <div  class="ibeis-div" id="detection-review"></div>
+    <div id="first-detection" class="ibeis-div" id="detection-review"></div>
 	<div id="detection-complete">{{detection.reviewCompleteText}}</div>
 
   </md-dialog-content>
