Adding navigation functionality

--- a/public/app/views/includes/workspace/detection.review.html
+++ b/public/app/views/includes/workspace/detection.review.html
@@ -29,6 +29,7 @@
     </div>
     <div style="#padding-left: 25cm;" class="ibeis-div" id="detection-review"></div>
 	<div id="detection-complete">{{detection.reviewCompleteText}}</div>
+  <md-divider></md-divider>
 
   </md-dialog-content>
 </md-dialog>
