--- a/public/app/views/includes/workspace/detection.review.html
+++ b/public/app/views/includes/workspace/detection.review.html
@@ -31,11 +31,11 @@
 	<div id="detection-complete">{{detection.reviewCompleteText}}</div>
   <md-divider></md-divider>
   <div id="past-detections" layout="row" layout-sm="column" layout-align="center">
-    <md-card class="card-img-parent" style="max-width: 150px; max-height: 150px;" ng-repeat="id in pastDetectionReviews" ng-click="getNextDetectionHTMLById($id)">
+    <md-card class="card-img-parent" style="max-width: 150px; max-height: 150px;" ng-repeat="url in pastDetectionUrls">
 
       <!-- <div ng-if="id == $detection.currentReviewID" style="border: 1px solid black;"> -->
-      <p> {{id}} </p>
-      <!-- <img class="lazyload" data-src="{{slide.url}}" style="max-height: 150px; max-width: 150px; width: auto" /> -->
+
+      <img class="lazyload" data-src="{{url}}" style="max-height: 150px; max-width: 150px; width: auto" />
 
       <!-- </div> -->
 
