--- a/public/app/views/includes/workspace/thumbnails.view.html
+++ b/public/app/views/includes/workspace/thumbnails.view.html
@@ -22,29 +22,10 @@
       function handleDrop(e) {
         e.preventDefault();
         console.log(e);
-        angular.element(this).scope().upload.select(e);
         console.log("Drop");
-        angular.element(this).scope().upload.show();
-        // If dropped items aren't files, reject them
-        var dt = e.dataTransfer;
-        if (dt.items) {
-          // Use DataTransferItemList interface to access the file(s)
-          for (var i=0; i < dt.items.length; i++) {
-            if (dt.items[i].kind == "file") {
-              var f = dt.items[i].getAsFile();
-              console.log("... file[" + i + "].name = " + f.name);
-              // angular.element(this).scope().upload.images.push(f);
-            }
-          }
-        } else {
-          // Use DataTransfer interface to access the file(s)
-          for (var i=0; i < dt.files.length; i++) {
-            console.log("... file[" + i + "].name = " + dt.files[i].name);
-            angular.element(this).scope().upload.images.push(dt.files[i]);
-          }
-        }
+        angular.element(this).scope().upload.select(e);
         // console.log(angular.element(this).scope().upload.images);
-        // angular.element(this).scope().upload.show();
+        angular.element(this).scope().upload.show();
         // e.upload.show();
         // $scope.upload.images.push(e;
         alert('Drop!');
@@ -63,15 +44,13 @@
 
     <style type="text/css">
       div#dropZone {
-        /*background: black;
+        background: gray;
         border-color: lightgray;
         border-width: 7px;
-        border-style: dashed;*/
+        border-style: dashed;
         text-align: center;
         vertical-align: middle;
         position: fixed;
-        top: 65px;
-        left: 350px;
         width: 100%;
         height: 100%;
         z-index: 999;
@@ -81,8 +60,8 @@
         /*padding-top: 200px;*/
         /*color: gray;*/
         font-size: 5em;
-        outline: 15px solid white;
-        margin: 15px;
+        /*outline: 15px solid white;*/
+        /*margin: 15px;*/
       }
     </style>
   </head>
@@ -90,10 +69,9 @@
   <body>
     <div class="gridListdemoBasicUsage">
       <div class="uploader" id="dropZone">
-        <div>Drag &amp; Drop Images Here</div>
+        <strong style="position: relative; float: left; top: 50%; left: 50%; transform: translate(-50%, -50%);"> Drag &amp; Drop Images Here </strong>
         <label>
-          <span>Select Image</span>
-          <input type="file" style="display:none;" title="Click to add Images" name="files" id="img-upload-btn">
+          <input type="file" style="display:none;" multiple accept="image/*" class="file-input" id="img-upload-btn">
         </label>
       </div>
 
