--- a/public/app/views/includes/workspace/image.info.html
+++ b/public/app/views/includes/workspace/image.info.html
@@ -29,7 +29,7 @@
           <md-datepicker ng-model="datetime_model" ng-init="set_datetime_model()" ng-value="mediaAsset.dateTime"
           md-min-date="min_date" md-max-date="max_date" ng-change="workspace_input.datetime_input = datetime_model.toISOString()"></md-datepicker>
           <!-- &nbsp; -->
-          <md-icon-button ng-click="save_datetime(); $parent.edit_datetime=false" class="fa fa-save"></md-icon-button>
+          <md-icon-button ng-click="save_datetime(); $parent.edit_datetime=false" style="padding-left: 15px;" class="fa fa-save"></md-icon-button>
         </div>
       </md-list>
       <md-subheader>Marked Individuals</md-subheader>
