--- a/public/app/views/includes/workspace/table.view.html
+++ b/public/app/views/includes/workspace/table.view.html
@@ -22,35 +22,35 @@
     </table>
 </div>
  -->
- <html>
+<html>
 <head>
-<script src="bower_components/lazysizes/plugins/attrchange/ls.attrchange.min.js" async=""></script>
- <script src="bower_components/lazysizes/lazysizes.min.js" async=""></script>
- </head>
+  <script src="bower_components/lazysizes/plugins/attrchange/ls.attrchange.min.js" async=""></script>
+  <script src="bower_components/lazysizes/lazysizes.min.js" async=""></script>
+</head>
 <div flex>
-    <table st-table="slides" class="table" style="width: 100%">
-        <thead>
-            <tr>
-                <th>Thumbnail</th>
-                <th ng-click="tableSortBy('id')">
-                  Annotation ID
-                </th>
-                <th ng-click="tableSortBy('dateTime')">Date</th>
-                <th st-sort="submetterOrganization">Organization</th>
-                <th st-sort="recordedBy">recordedBy</th>
-            </tr>
-        </thead>
-        <tbody>
-            <tr ng-repeat="slide in currentSlides | orderBy:defaultTableSortProperty:reverse" ng-click="tableImageInfo($event, slide.id)">
-                <td><img class="lazyload" data-src="{{slide.url}}" style="max-height: 150px; max-width: 150px; width: auto" /></td>
-                <td>{{slide.id}}</td>
-                <td>
-                    {{convertDateTime(slide.dateTime)}}
-                </td>
-                <td>{{currentSlides.submitterOrganization}}</td>
-                <td>{{currentSlides.recordedBy}}</td>
-            </tr>
-        </tbody>
-    </table>
+  <table st-table="slides" class="table" style="width: 100%">
+    <thead>
+      <tr>
+        <th>Thumbnail</th>
+        <th ng-click="tableSortBy('id')">
+          Media Asset ID
+        </th>
+        <th ng-click="tableSortBy('dateTime')">Date</th>
+        <th st-sort="submetterOrganization">Organization</th>
+        <th st-sort="recordedBy">recordedBy</th>
+      </tr>
+    </thead>
+    <tbody>
+      <tr ng-repeat="slide in currentSlides | orderBy:defaultTableSortProperty:reverse" ng-click="tableImageInfo($event, slide.id)">
+        <td><img class="lazyload" data-src="{{slide.url}}" style="max-height: 150px; max-width: 150px; width: auto" /></td>
+        <td>{{slide.id}}</td>
+        <td>
+            {{convertDateTime(slide.dateTime)}}
+        </td>
+        <td>{{currentSlides.submitterOrganization}}</td>
+        <td>{{currentSlides.recordedBy}}</td>
+      </tr>
+    </tbody>
+  </table>
 </div>
 </html>
