--- a/public/app/views/pages/workspace.html
+++ b/public/app/views/pages/workspace.html
@@ -86,9 +86,8 @@ window.addEventListener("drop",function(e){
     <!-- using ng-includes to cut down on the number of lines in each html file -->
     <div>
       <div flex ng-if="workspace == 'Loading...' || loading == 'on'" class="md-content">
-        <div layout="row" layout-align="center center">
-          <md-progress-circular md-mode="indeterminate" md-diameter="100">
-          </md-progress-circular>
+        <div layout="row" layout="column" layout-align="space-around" style="position: absolute;bottom:1%;height:2000px;width:100%">
+          <md-progress-circular md-mode="indeterminate" md-diameter="100" style="position:fixed;bottom:50%" ></md-progress-circular>
         </div>
       </div>
       <ng-include ng-show="view == 'thumbnails' && workspace != 'Loading...'" src="'app/views/includes/workspace/thumbnails.view.html'" flex></ng-include>
