--- a/public/app/views/includes/workspace/thumbnails.view.html
+++ b/public/app/views/includes/workspace/thumbnails.view.html
@@ -21,14 +21,9 @@
 
       function handleDrop(e) {
         e.preventDefault();
-        console.log(e);
-        console.log("Drop");
-        angular.element(this).scope().upload.select(e);
-        // console.log(angular.element(this).scope().upload.images);
+        console.log("Adding images through Drop zone.");
+        angular.element(this).scope().upload.addDropImages(e);
         angular.element(this).scope().upload.show();
-        // e.upload.show();
-        // $scope.upload.images.push(e;
-        alert('Drop!');
         hideDropZone();
       }
 
