--- a/public/app/views/includes/workspace/upload/upload.dialog.html
+++ b/public/app/views/includes/workspace/upload/upload.dialog.html
@@ -29,8 +29,7 @@
     </div>
   </md-dialog-content>
   <md-dialog-actions layout="row">
-    <input style="display: none;" type="file" multiple accept="image/*" class="file-input" id="img-upload-btn" onchange="angular.element(this).scope().upload.select(this)">
-    <!-- <lf-ng-md-file-input lf-files="files" drag multiple preview progress ng-onchange="upload.select(this)" ng-show="upload.stage < 2" ng-disabled="upload.stage > 0"></lf-ng-md-file-input> -->
+    <input type="file" multiple accept="image/*" class="file-input" id="img-upload-btn" onchange="angular.element(this).scope().upload.addImages(this)">
 
     <md-button class="md-primary md-raised" ng-click="proxy('img-upload-btn')" ng-show="upload.stage < 2" ng-disabled="upload.stage > 0">
       Select <strong>Images</strong>
@@ -38,9 +37,5 @@
     <md-button class="md-primary md-raised" ng-click="upload.upload()" ng-show="upload.stage < 2" ng-disabled="upload.images.length <= 0 || upload.stage > 0">
       Upload <strong>Images</strong>
     </md-button>
-    <!-- The idea of the 'Upload More' button just resetting the dialog doesn't make sense, for now I'm just gonna reset the stage to 0 after success -->
-    <!-- <md-button class="md-primary md-raised" ng-click="upload.reset()" ng-show="upload.stage === 2">
-      Upload <strong>More</strong>
-    </md-button> -->
   </md-dialog-actions>
 </md-dialog>
