--- a/public/app/views/includes/workspace/upload/upload.dialog.html
+++ b/public/app/views/includes/workspace/upload/upload.dialog.html
@@ -9,6 +9,12 @@
     </div>
   </md-toolbar>
   <md-dialog-content>
+    <div flex ng-if="upload.stage == 1" class="md-content">
+      <div layout="row" layout="column" layout-align="space-around" style="position: absolute;bottom:1%;height:2000px;width:100%;">
+        <md-progress-circular md-mode="indeterminate" md-diameter="100" style="position:fixed;bottom:50%" ></md-progress-circular>
+      </div>
+    </div>
+
     <div class="md-padding" ng-show="upload.images.length <= 0">
       No images selected. Please select some images to upload.
     </div>
