Implemented Junk Label support

--- a/public/app/views/includes/workspace/image.info.html
+++ b/public/app/views/includes/workspace/image.info.html
@@ -78,7 +78,7 @@
         </md-list-item>
       </md-list>
       <md-button class="dltbtn" ng-click="delete_id=mediaAsset.id; delete_image()">
-        Delete Image
+        Classify as Junk
       </md-button>
     </div>
   </md-dialog-content>
