--- a/public/app/views/includes/workspace/workspace.left.html
+++ b/public/app/views/includes/workspace/workspace.left.html
@@ -120,6 +120,9 @@ $(function(){
 	</md-button>
   </div> -->
   <md-divider></md-divider>
+  <label>
+    <input type="checkbox" ng-click="toggleJunk()">
+   Show Junk</label><br/>
   <p ng-hide="workspace == 'Loading...'">
     <!-- Other workspace information. -->
   </p>
